lua/examples/lua-test-suite/IntelliJ-Luanalysis/src/test/resources/inspections/local_def_assignment.lua.fail
---@type number
local aNumber = <error descr="Type mismatch. Required: 'number' Found: '\"not a number\"'">"not a number"</error>
